# repo_t_ac_cpp_gtest

./: .gitignore  Makefile.am  README.md  configure.ac
include/: Makefile.am  README.md
include/demo/: Makefile.am  demo.h
lib/: Makefile.am  Makefile.inc  mem.c  mem.h  say.c
lib/time/: date.c  date.h
src/: Makefile.am  Makefile.inc  bonjour.c  hello.c
